--- a/.gitignore
+++ b/.gitignore
@@ -60,8 +60,9 @@ typings/
 # next.js build output
 .next
 
-# Locally generated API files
+# Locally generated API files and modified portfolio items
 output/*.json
+output/portfolio
 
 # Exclude temp 'working' directory
 temp/
