--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ typings/
 # Locally generated API files and modified portfolio items
 output/*.json
 output/portfolio
+all*.json
 
 # Exclude temp 'working' directory
 temp/
