--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "author": "Clyde D'Souza",
   "dependencies": {
     "jsonlint": "^1.6.3",
-    "processmd": "^4.5.2"
+    "processmd": "4.5.3"
   }
 }
